# indri

./: .pre-commit-config.yaml  pyproject.toml
tests/: test_indri.py
