[tool.poetry]
name = "indri"
version = "0.1.0"
description = ""
authors = ["Elijah Passmore <eljpsm@eljpsm.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
loguru = "^0.6.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
black = "^23.3.0"
pytest = "^7.2.2"
mypy = "^1.1.1"
types-click = "^7.1.8"
pre-commit = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
